--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body class="navigation-with-keyboard" bgcolor="#800000">
+<body class="navigation-with-keyboard" bgcolor="#33475b">
 <h1>MARÍA DOLORES MARTÍNEZ AGUILAR</H1>
 <H1>PROFESORA DE ENSEÑANZA SECUNDARIA - IES FERNANDO III</H1>  
 <H1>PÁGINA EN CONSTRUCCIÓN</H1>
